src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* @import '@fontsource/fira-mono';yarn d */
:root{
	/* color */
	--text-secondary: #637381;
	/* background color */
	--bg-gray-80: rgba(145, 158, 171, 0.08);
}
.text-overline {
	@apply text-[10px] font-[700] uppercase;
}

.text-caption {
	@apply text-[12px] font-[400];
}

.text-button {
	@apply text-[16px] font-[700];
}

.text-body2 {
	@apply text-[14px] font-[400];
}

.text-body1 {
	@apply text-[16px] font-[400];
}

.text-subtitle2 {
	@apply text-[14px] font-[700];
}

.text-subtitle2 {
	@apply text-[16px] font-[700];
}

.text-h6 {
	@apply text-[20px] font-[500];
}

.text-h5 {
	@apply text-[24px] font-[500];
}

.text-h4 {
	@apply text-[34px] font-[500];
}

.text-h3 {
	@apply text-[48px] font-[700];
}

.text-h2 {
	@apply text-[60px] font-[700];
}

.text-h2 {
	@apply text-[96px] font-[700];
}
.avatar-active {
	box-shadow: rgb(24 144 255) 0px 0px 1px, rgb(24 144 255) 0px 0px 2px, rgb(24 144 255) 0px 0px 3px,
		rgb(24 144 255) 0px 0px 4px, rgb(24 144 255) 0px 0px 1px, rgb(24 144 255) 0px 0px 2px,
		rgb(24 144 255) 0px 0px 3px, rgb(24 144 255) 0px 0px 4px, rgb(24 144 255) 0px 0px 1px,
		rgb(24 144 255) 0px 0px 2px, rgb(24 144 255) 0px 0px 3px, rgb(24 144 255) 0px 0px 4px,
		rgb(24 144 255) 0px 0px 1px, rgb(24 144 255) 0px 0px 2px, rgb(24 144 255) 0px 0px 3px,
		rgb(24 144 255) 0px 0px 4px;
}
.btn-google{
	background-color: #ea4335;
}
.btn-facebook{
	background-color: rgb(56, 92, 168);
}
.btn-twitter{
	background-color: rgb(29, 155, 240);
}
.text-primary{
	color: #212B36;
}
.btn-talk{
	box-shadow: 0px 8px 16px rgba(0, 171, 85, 0.24);
	border-radius: 8px;
}

